# tpDatos

./: AnotacionesInforme  C45.cpp  C45.h  C45_test.cpp  CMakeLists.txt  Coordinate.cpp  Coordinate.h  Crime.cpp  Crime.h  Crimen.cpp  Crimen.h  Feature.cpp  Feature.h  Reader.cpp  Reader.h  agregar temp.R  cluster.R  gain.cpp  gain.h  homogeneous.csv  main.cpp  random_forest.cpp  random_forest.h  reduced.csv  test.cpp  test_functions.cpp  test_functions.h
